--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-
+    <section>Section 1</section>
+    <section>Section 2</section>
+    <section>Section 3</section>
     <script src="" async defer></script>
   </body>
 </html>
