Added gitignore and modified index.html file.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <section>Section 1</section>
       <section>Section 2</section>
       <section>Section 3</section>
+      <div>Some text inside of div.</div>
     </section>
     <footer>Footer</footer>
     <script src="" async defer></script>
